--- a/src/frame.fxml
+++ b/src/frame.fxml
@@ -9,12 +9,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="595.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Control">
    <children>
-      <Button fx:id="submitBtn" layoutX="242.0" layoutY="552.0" mnemonicParsing="false" onAction="#submitClick" prefHeight="43.0" prefWidth="123.0" text="Submit">
+      <Button fx:id="submitBtn" layoutX="242.0" layoutY="514.0" mnemonicParsing="false" onAction="#submitClick" prefHeight="43.0" prefWidth="123.0" text="Submit">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextArea fx:id="inputText" layoutX="101.0" layoutY="41.0" prefHeight="108.0" prefWidth="405.0">
+      <TextArea fx:id="inputText" layoutX="101.0" layoutY="41.0" prefHeight="101.0" prefWidth="405.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -22,12 +22,12 @@
             <Font size="14.0" />
          </font>
       </TextArea>
-      <Label layoutX="283.0" layoutY="14.0" text="Input">
+      <Label layoutX="283.0" layoutY="6.0" text="Input">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="outputText" layoutX="101.0" layoutY="189.0" prefHeight="101.0" prefWidth="405.0">
+      <TextArea fx:id="outputText" layoutX="101.0" layoutY="174.0" prefHeight="101.0" prefWidth="405.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -35,12 +35,12 @@
             <Font size="14.0" />
          </font>
       </TextArea>
-      <Label layoutX="275.0" layoutY="162.0" text="Output">
+      <Label layoutX="275.0" layoutY="142.0" text="Output">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="typesOutput" layoutX="101.0" layoutY="344.0" prefHeight="186.0" prefWidth="405.0">
+      <TextArea fx:id="typesOutput" layoutX="101.0" layoutY="322.0" prefHeight="186.0" prefWidth="405.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -48,10 +48,15 @@
             <Font size="14.0" />
          </font>
       </TextArea>
-      <Label layoutX="275.0" layoutY="317.0" text="Types">
+      <Label layoutX="281.0" layoutY="288.0" text="Types">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <Button fx:id="clearBtn" layoutX="242.0" layoutY="561.0" mnemonicParsing="false" onAction="#clear" prefHeight="43.0" prefWidth="123.0" text="Clear">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
